--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -20,60 +20,60 @@
                                 <p class="checkbox_title checkbox_title_facilities select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_facilities list">
                                     <li>
-                                                <span>
-                                                    <input type="checkbox" id="facilitiesALL" name="checkAll">
-                                                    <label for="facilitiesAll"><span></span>전체</label>
-                                                </span>
+                                        <span>
+                                            <input type="checkbox" id="facilitiesAll" name="checkAll">
+                                            <label for="facilitiesAll"><span></span>전체</label>
+                                        </span>
                                     </li>
                                     <li>
-                                                <span>
-                                                    <input type="checkbox" id="facilities01" name="">
-                                                    <label for="facilities01"><span></span>AED</label>
-                                                </span>
                                         <span>
-                                                    <input type="checkbox" id="facilities02" name="">
-                                                    <label for="facilities02"><span></span>CCTV</label>
-                                                </span>
+                                            <input type="checkbox" id="facilities01" name="">
+                                            <label for="facilities01"><span></span>AED</label>
+                                        </span>
+                                        <span>
+                                            <input type="checkbox" id="facilities02" name="">
+                                            <label for="facilities02"><span></span>CCTV</label>
+                                        </span>
                                     </li>
                                     <li>
-                                                <span>
-                                                    <input type="checkbox" id="facilities03" name="">
-                                                    <label for="facilities03"><span></span>비상벨</label>
-                                                </span>
                                         <span>
-                                                    <input type="checkbox" id="facilities04" name="">
-                                                    <label for="facilities04"><span></span>금연벨</label>
-                                                </span>
+                                            <input type="checkbox" id="facilities03" name="">
+                                            <label for="facilities03"><span></span>비상벨</label>
+                                        </span>
+                                        <span>
+                                            <input type="checkbox" id="facilities04" name="">
+                                            <label for="facilities04"><span></span>금연벨</label>
+                                        </span>
                                     </li>
                                     <li>
-                                                <span>
-                                                    <input type="checkbox" id="facilities05" name="">
-                                                    <label for="facilities05"><span></span>무정차 방지등</label>
-                                                </span>
                                         <span>
-                                                    <input type="checkbox" id="facilities06" name="">
-                                                    <label for="facilities06"><span></span>홍보 전광판</label>
-                                                </span>
+                                            <input type="checkbox" id="facilities05" name="">
+                                            <label for="facilities05"><span></span>무정차 방지등</label>
+                                        </span>
+                                        <span>
+                                            <input type="checkbox" id="facilities06" name="">
+                                            <label for="facilities06"><span></span>홍보 전광판</label>
+                                        </span>
                                     </li>
                                     <li>
-                                                <span>
-                                                    <input type="checkbox" id="facilities07" name="">
-                                                    <label for="facilities07"><span></span>실내 공기질 모니터링</label>
-                                                </span>
                                         <span>
-                                                    <input type="checkbox" id="facilities08" name="">
-                                                    <label for="facilities08"><span></span>스마트 공기청정기</label>
-                                                </span>
+                                            <input type="checkbox" id="facilities07" name="">
+                                            <label for="facilities07"><span></span>실내 공기질 모니터링</label>
+                                        </span>
+                                        <span>
+                                            <input type="checkbox" id="facilities08" name="">
+                                            <label for="facilities08"><span></span>스마트 공기청정기</label>
+                                        </span>
                                     </li>
                                     <li>
-                                                <span>
-                                                    <input type="checkbox" id="facilities09" name="">
-                                                    <label for="facilities09"><span></span>냉난방기</label>
-                                                </span>
                                         <span>
-                                                    <input type="checkbox" id="facilities10" name="">
-                                                    <label for="facilities10"><span></span>기타</label>
-                                                </span>
+                                            <input type="checkbox" id="facilities09" name="">
+                                            <label for="facilities09"><span></span>냉난방기</label>
+                                        </span>
+                                        <span>
+                                            <input type="checkbox" id="facilities10" name="">
+                                            <label for="facilities10"><span></span>기타</label>
+                                        </span>
                                     </li>
                                 </ul>
                             </div>
