개소 CRUD 추가중

--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -4,6 +4,7 @@
     <th:block th:insert="/fragments/default/default"/>
     <link rel="stylesheet" type="text/css" href="/css/monitoring.css">
     <script type="text/javascript" src="/js/map/controlMap.js"></script>
+    <script type="text/javascript" src="/js/pages/station.js"></script>
     <script type="text/javascript" src="/js/pages/mntr.js"></script>
     <th:block th:insert="/view/commons/map"/>
 </head>
