kakao roadview zuul filter test

--- a/danusys-commons-ui/src/main/resources/templates/view/commons/roadView.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/roadView.html
@@ -10,8 +10,8 @@
         /* 지도위에 로드뷰의 위치와 각도를 표시하기 위한 map walker 아이콘의 스타일 */
         .MapWalker {position:absolute;margin:-26px 0 0 -51px}
         .MapWalker .figure {position:absolute;width:25px;left:38px;top:-2px;
-            height:39px;background:url(https://t1.daumcdn.net/localimg/localimages/07/2018/pc/roadview_minimap_wk_2018.png) -298px -114px no-repeat}
-        .MapWalker .angleBack {width:102px;height:52px;background: url(https://t1.daumcdn.net/localimg/localimages/07/2018/pc/roadview_minimap_wk_2018.png) -834px -2px no-repeat;}
+            height:39px;background:url("/t1-daumcdn-net/localimg/localimages/07/2018/pc/roadview_minimap_wk_2018.png") -298px -114px no-repeat}
+        .MapWalker .angleBack {width:102px;height:52px;background: url("/t1-daumcdn-net/localimg/localimages/07/2018/pc/roadview_minimap_wk_2018.png") -834px -2px no-repeat;}
         .MapWalker.m0 .figure {background-position: -298px -114px;}
         .MapWalker.m1 .figure {background-position: -335px -114px;}
         .MapWalker.m2 .figure {background-position: -372px -114px;}
@@ -59,9 +59,13 @@
     </div>
 </div>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps-tunneling/sdk.js?appkey=8a0ebda8876bb68f663ceb77b22a5a51&libraries=services,clusterer,drawing"></script>
+<script type="text/javascript" src="/dapi-kakao-com/v2/maps-tunneling/sdk.js?appkey=8a0ebda8876bb68f663ceb77b22a5a51&libraries=services,clusterer,drawing"></script>
 
-<script type=text/javascript src="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.js"></script>
+<script type="text/javascript">
+
+</script>
+
+<script type="text/javascript" src="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.js"></script>
 <script type="text/javascript" src="/webjars/jquery/3.6.0/dist/jquery.min.js" ></script>
 <script type="text/javascript" src="/js/common/common.js"></script>
 
