--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -55,30 +55,16 @@
                     <table id="userAccountTable">
                         <thead>
                         <tr>
-                            <th>Index</th>
                             <th>아이디</th>
                             <th>이름</th>
-                            <th>소속 그룹</th>
                             <th>전화번호</th>
                             <th>이메일</th>
-                            <th>마지막 접속 시간</th>
                             <th>계정 상태</th>
+                            <th>생성일</th>
+                            <th>마지막 접속 시간</th>
                             <th>상세보기</th>
                         </tr>
                         </thead>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>userID0001</td>
-                            <td>김다누</td>
-                            <td>관제 1팀 외 00개</td>
-                            <td>010-0000-0000</td>
-                            <td>danusys@danusys.com</td>
-                            <td>2021.11.25 15:49</td>
-                            <td><span class="status green"></span>정상</td>
-                            <td><span class="button">상세보기</span></td>
-                        </tr>
-                        </tbody>
                     </table>
                 </div>
             </article>
