개소 관리 조희

--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -42,5 +42,6 @@
     <script type="text/javascript" src="/js/pages/commonCode.js"></script>
     <script type="text/javascript" src="/js/pages/event.js"></script>
     <script type="text/javascript" src="/js/pages/account.js"></script>
+    <script type="text/javascript" src="/js/pages/station.js"></script>
 </th:block>
 </html>
