--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -17,7 +17,7 @@
                         <dt>개소 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="stationSel">
-                                <p class="checkbox_title checkbox_title_station select" data-placeholder="행정구역 선택">개소 종류 선택</p>
+                                <p class="checkbox_title checkbox_title_station select" data-placeholder="개소 종류 선택">개소 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_station list">
                                     <li>
                                                 <span>
@@ -187,8 +187,8 @@
                         </dd>
                     </dl>
                     <dl class="search_text_set">
-                        <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                        <dd class="button"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
+                        <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
+                        <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
                 </div>
@@ -212,10 +212,9 @@
                 </div>
             </div>
             <div class="search_table">
-                <table>
+                <table id="stationTable">
                     <thead>
                     <tr>
-                        <th>Index</th>
                         <th>개소 관리 ID</th>
                         <th>개소 종류</th>
                         <th>개소 이름</th>
@@ -226,41 +225,6 @@
                         <th>상세보기</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>BG001</td>
-                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td><span class="status red"></span></td>
-                        <td>AED, 비상벨, 스마트 공기청정지, 냉난방기 외 00개</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>BG001</td>
-                        <td><span class="type pole"><i><img src="/images/default/icon_pole.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td><span class="status green"></span></td>
-                        <td>AED, 비상벨, 스마트 공기청정지, 냉난방기 외 00개</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>BG001</td>
-                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td><span class="status gray"></span></td>
-                        <td>AED, 비상벨, 스마트 공기청정지, 냉난방기 외 00개</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    </tbody>
                 </table>
             </div>
         </article>
