--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -184,7 +184,7 @@
                         <span>까지</span>
                     </dl>
                     <dl class="search_text_set">
-                        <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
+                        <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
                          <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
