--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -214,7 +214,7 @@
                         </dd>
                     </dl>
                     <dl class="search_text_set">
-                        <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
+                        <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
                          <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
@@ -239,10 +239,9 @@
                 </div>
             </div>
             <div class="search_table">
-                <table>
+                <table id="facilityTable">
                     <thead>
                     <tr>
-                        <th>Index</th>
                         <th>시설물 관리 ID</th>
                         <th>시설물 종류</th>
                         <th>시설물 상태</th>
@@ -253,54 +252,7 @@
                         <th>상세보기</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>BF001</td>
-                        <td>AED</td>
-                        <td><span class="status red"></span></td>
-                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>BF001</td>
-                        <td>AED</td>
-                        <td><span class="status green"></span></td>
-                        <td><span class="type pole"><i><img src="/images/default/icon_pole.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>BF001</td>
-                        <td>AED</td>
-                        <td><span class="status gray"></span></td>
-                        <td><span class="type bus"><i><img src="/images/default/icon_bus.svg"></i></span></td>
-                        <td>광명 시청</td>
-                        <td>철산 3동</td>
-                        <td>경기 광명시 시청로 20 광명시청</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    </tbody>
                 </table>
-            </div>
-            <div class="table_bottom">
-                <ul class="page_nav">
-                    <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                    <li class="on">1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                </ul>
-                <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
             </div>
         </article>
     </section>
