--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="utf-8">
 <title>레이아웃</title>
@@ -179,7 +181,7 @@
                     <dl>
                         <dt>상태</dt>
                         <dd>
-                            <input type="text" placeholder="충전 중" class="drone_status">
+                            <input type="text" placeholder="충전 중" class="drone_status" disabled>
                         </dd>
                         <dt>정</dt>
                         <dd>
@@ -189,7 +191,7 @@
                     <dl>
                         <dt>ID</dt>
                         <dd>
-                            <input type="text" placeholder="ID">
+                            <input type="text" placeholder="ID" class="drone_id" disabled>
                         </dd>
                         <dt>부</dt>
                         <dd>
