멀티 셀렉트 박스 class select, list 추가

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -19,8 +19,8 @@
                         <dt>이벤트 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="eventSel">
-                                <p class="checkbox_title checkbox_title_event">이벤트 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_event">
+                                <p class="checkbox_title checkbox_title_event select">이벤트 종류 선택</p>
+                                <ul class="checkbox_list checkbox_list_event list">
                                     <li>
                                         <span>
                                             <input type="checkbox" id="eventALL" name="checkAll">
@@ -74,8 +74,8 @@
                         <dt>행정구역</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="districtSel">
-                                <p class="checkbox_title checkbox_title_district">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district">
+                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district list">
                                     <li>
                                                 <span>
                                                     <input type="checkbox" id="districtALL" name="checkAll">
