--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -25,12 +25,12 @@
                             <dt>계정 상태</dt>
                             <dd>
                                 <span>
-                                    <input type="checkbox" id="normal" name="">
-                                    <label for="normal"><span></span>정상</label>
+                                    <input type="checkbox" id="use" name="userStatus" value="0">
+                                    <label for="use"><span></span>사용</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="none" name="">
-                                    <label for="none"><span></span>사용안함</label>
+                                    <input type="checkbox" id="none" name="userStatus" value="1">
+                                    <label for="none"><span></span>휴면</label>
                                 </span>
                             </dd>
                         </dl>
