공통 코드 관리 3 depth table 조회 및 이벤트핸들러

--- a/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
@@ -28,39 +28,23 @@
                     <div class="article_title">
                         <dl class="title">
                             <dt>그룹 코드 목록</dt>
-                            <dd><span class="count">123</span>건</dd>
+                            <dd><span class="count">0</span>건</dd>
                         </dl>
                         <ul>
                             <li><i><img src="/images/default/add.svg"></i>코드 추가</li>
                         </ul>
                     </div>
                     <div class="search_table">
-                        <table>
+                        <table id="firstCodeTable" data-table-seq="0">
                             <thead>
-                            <tr>
-                                <th>Index</th>
-                                <th>그룹 코드</th>
-                                <th>그룹 코드 이름</th>
-                                <th>사용 여부</th>
-                                <th>상세보기</th>
-                            </tr>
+                                <tr>
+                                    <th>그룹 코드</th>
+                                    <th>그룹 코드 이름</th>
+                                    <th>사용 여부</th>
+                                    <th>상세보기</th>
+                                </tr>
                             </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>FCLT_E_PURPOSE</td>
-                                <td>시설물</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            </tbody>
+
                         </table>
                     </div>
                 </article>
@@ -68,39 +52,22 @@
                     <div class="article_title">
                         <dl class="title">
                             <dt>상세 코드 목록</dt>
-                            <dd><span class="count">123</span>건</dd>
+                            <dd><span class="count">0</span>건</dd>
                         </dl>
                         <ul>
                             <li><i><img src="/images/default/add.svg"></i>코드 추가</li>
                         </ul>
                     </div>
                     <div class="search_table">
-                        <table>
+                        <table id="secondCodeTable" data-table-seq="1">
                             <thead>
                             <tr>
-                                <th>Index</th>
                                 <th>상세 코드</th>
                                 <th>상세 코드 이름</th>
                                 <th>사용 여부</th>
                                 <th>상세보기</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>AED</td>
-                                <td>심장제세동기</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>AED</td>
-                                <td>심장제세동기</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            </tbody>
                         </table>
                     </div>
                 </article>
@@ -108,39 +75,22 @@
                     <div class="article_title">
                         <dl class="title">
                             <dt>세부 코드 목록</dt>
-                            <dd><span class="count">123</span>건</dd>
+                            <dd><span class="count">0</span>건</dd>
                         </dl>
                         <ul>
                             <li><i><img src="/images/default/add.svg"></i>코드 추가</li>
                         </ul>
                     </div>
                     <div class="search_table">
-                        <table>
+                        <table id="" data-table-seq="2">
                             <thead>
                             <tr>
-                                <th>Index</th>
                                 <th>세부 코드</th>
                                 <th>세부 코드 이름</th>
                                 <th>사용 여부</th>
                                 <th>상세보기</th>
                             </tr>
                             </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>세부 코드</td>
-                                <td>세부 코드 이름</td>
-                                <td><span class="status"></span>사용 안함</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>세부 코드</td>
-                                <td>세부 코드 이름</td>
-                                <td><span class="status green"></span>사용</td>
-                                <td><span class="button">상세보기</span></td>
-                            </tr>
-                            </tbody>
                         </table>
                     </div>
                 </article>
