--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -7,7 +7,7 @@
     <meta name="ctx" th:content="${#httpServletRequest.getContextPath()}" />
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
-    <meta name="context-path" th:content="@{/}"/>
+    <meta name="context-path" th:href="@{/}"/>
 
     <!--js file -->
 
