--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko"
+<html
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
@@ -68,72 +68,72 @@
                 </dl>
                 <div class="listScroll">
                     <ul>
-                        <li>
-                            <dl>
-                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><span class="gray">수리중</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="gray">수리중</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
 
 
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><span class="gray">수리중</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><span class="yellow">충전중</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><span class="gray">임시저장</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><span class="yellow">충전중</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
-                        <li>
-                            <dl>
-                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>
-                                <dd><i><img src="images/um/listMore.svg"></i></dd>
-                            </dl>
-                            <p>ID : administrator01</p>
-                            <p>2021-07-06 09:23:56</p>
-                        </li>
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="gray">수리중</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="yellow">충전중</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="gray">임시저장</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="yellow">충전중</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <dl>-->
+<!--                                <dt><span class="green">충전완료</span>DJI신림 5호</dt>-->
+<!--                                <dd><i><img src="images/um/listMore.svg"></i></dd>-->
+<!--                            </dl>-->
+<!--                            <p>ID : administrator01</p>-->
+<!--                            <p>2021-07-06 09:23:56</p>-->
+<!--                        </li>-->
                     </ul>
                 </div>
             </section>
