공통코드 데이터 콤보박스 생성 공통화.

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -18,7 +18,7 @@
                     <dl class="selectbox_set">
                         <dt>이벤트 종류</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="eventSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="eventKind">
                                 <p class="checkbox_title checkbox_title_event select">이벤트 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_event list">
                                     <li>
@@ -73,7 +73,7 @@
                     <dl class="selectbox_set">
                         <dt>행정구역</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="districtSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="district">
                                 <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
