--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -16,7 +16,7 @@
                     <dl class="selectbox_set">
                         <dt>시설물 종류</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="facilitiesSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="facilityKind">
                                 <p class="checkbox_title checkbox_title_facilities select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_facilities list">
                                     <li>
@@ -110,7 +110,7 @@
                     <dl class="selectbox_set">
                         <dt>행정구역</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="districtSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="district">
                                 <p class="checkbox_title checkbox_title_district select" data-placeholder="행정구역 선택">행정구역 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
