--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event1.html
@@ -18,7 +18,7 @@
                     <dl class="selectbox_set">
                         <dt>이벤트 종류</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="eventSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="eventKind">
                                 <p class="checkbox_title checkbox_title_event select" data-placeholder="이벤트 종류 선택">이벤트 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_event list">
                                     <li>
@@ -106,7 +106,7 @@
                     <dl class="selectbox_set">
                         <dt>행정구역</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="districtSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="district">
                                 <p class="checkbox_title checkbox_title_district select" data-placeholder="행정구역 선택">행정구역 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
