--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -16,7 +16,7 @@
                     <dl class="selectbox_set">
                         <dt>개소 종류</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="stationSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="stationKind">
                                 <p class="checkbox_title checkbox_title_station select" data-placeholder="개소 종류 선택">개소 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_station list">
                                     <li>
@@ -42,7 +42,7 @@
                     <dl class="selectbox_set">
                         <dt>시설물 종류</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="facilitiesSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="facilityKind">
                                 <p class="checkbox_title checkbox_title_station_find select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_station_find list">
                                     <li>
@@ -83,7 +83,7 @@
                     <dl class="selectbox_set">
                         <dt>행정구역</dt>
                         <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="districtSel">
+                            <div class="dropdown_checkbox" data-selectbox-type="district">
                                 <p class="checkbox_title checkbox_title_district select" data-placeholder="행정구역 선택">행정구역 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
