공지사항 검색조건 추가 및 쿼리수정, UI 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -26,7 +26,7 @@
                         <dl class="search_text_set">
                             <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
                              <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
-                            <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
+                            <dd class="button" id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</dd>
                         </dl>
                     </div>
                 </form>
@@ -53,30 +53,8 @@
                             <th>상세보기</th>
                         </tr>
                         </thead>
-<!--                        <tbody>-->
-<!--                        <tr>-->
-<!--                            <td>1</td>-->
-<!--                            <td>공지사항 제목</td>-->
-<!--                            <td>김다누</td>-->
-<!--                            <td>2021.11.25 15:49</td>-->
-<!--                            <td><i><img src="/images/default/clipboard.svg"></i></td>-->
-<!--                            <td><span class="button">상세보기</span></td>-->
-<!--                        </tr>-->
-<!--                        </tbody>-->
                     </table>
                 </div>
-                <!--<div class="tableBottom">
-                    <ul class="pageNav">
-                        <li class="prev"><i><img src="/images/default/first.svg"></i></li>
-                        <li class="on">1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li class="next"><i><img src="/images/default/last.svg"></i></li>
-                    </ul>
-                    <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
-                </div>-->
             </article>
         </section>
     </th:block>
