--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -36,7 +36,7 @@
                     <li><i><img src="/images/default/add.svg"></i>사용자 그룹 추가</li>
                 </ul>
             </div>
-            <div class="search_table">
+            <div class="search_table" id="userGroupTable">
                 <table>
                     <thead>
                     <tr>
@@ -47,99 +47,6 @@
                         <th>상세보기</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>관리자</td>
-                        <td>김다누 외 00명</td>
-                        <td>관리자 그룹에 대한 설명</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    </tbody>
                 </table>
             </div>
             <div class="table_bottom">
