--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -133,7 +133,7 @@
 .search_table table tbody tr td span.status.green{background: #357d33;}
 .search_table table tbody tr td span.station_type{display: block; width: 36px; height: 36px; margin: auto;}
 .search_table table tbody tr td span.station_type img{width: 100%; height: 100%;}
-.search_table .table_body{height: 100%; overflow: auto;}
+.search_table .table_body{height: 100%; overflow: auto; border-bottom: 2px solid #292c34;}
 .search_table .table_bottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 14px 0px 14px 0px;}
 .search_table .table_bottom .page_nav{flex: 1;  display: flex; align-items: center; justify-content: center; grid-gap: 10px;}
 .search_table .table_bottom .page_nav li{display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; line-height: 32px; text-align: center; font-size: 14px; color: #7f8491; border-radius: 100%; background: #292c34; cursor: pointer;}
