환경설정: 사용자, 사용자그룹, 공통코드 조회 및 이벤트핸들러 추가

--- a/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/commonCode.html
@@ -18,7 +18,7 @@
                         <dl class="search_text_set">
                             <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
                             <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
-                            <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
+                            <dd class="button" id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</dd>
                         </dl>
                     </div>
                 </form>
@@ -44,7 +44,6 @@
                                     <th>상세보기</th>
                                 </tr>
                             </thead>
-
                         </table>
                     </div>
                 </article>
