--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -36,7 +36,7 @@
                         </dl>
                         <dl class="search_text_set">
                              <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
-                            <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
+                            <dd class="button" id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</dd>
                         </dl>
                     </div>
                 </form>
