--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -21,7 +21,7 @@
                     <dl class="search_text_set">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
                          <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
-                        <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
+                        <dd class="button" id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
                 </div>
             </form>
@@ -37,29 +37,17 @@
                 </ul>
             </div>
             <div class="search_table" id="userGroupTable">
-                <table>
+                <table id="userAccountTable">
                     <thead>
                     <tr>
-                        <th>Index</th>
+                        <th>그룹 아이디</th>
                         <th>그룹 이름</th>
-                        <th>소속 유저</th>
+                        <th>소속 계정</th>
                         <th>설명</th>
                         <th>상세보기</th>
                     </tr>
                     </thead>
                 </table>
-            </div>
-            <div class="table_bottom">
-                <ul class="page_nav">
-                    <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                    <li class="on">1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                </ul>
-                <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
             </div>
         </article>
     </section>
