맵 공통 속성 변경 및 팝업 추가중.

--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -55,6 +55,8 @@
         <script type="text/javascript" src="/js/map/creater/mapCreater.js"></script>
         <script type="text/javascript" src="/js/map/creater/layerControlCreater.js"></script>
         <script type="text/javascript" src="/js/map/creater/measureToolCreater.js"></script>
+        <script type="text/javascript" src="/js/map/creater/mapPopupCreater.js"></script>
+
 
         <script type="text/javascript" src="/js/map/layer_icon.js"></script>
         <script type="text/javascript" src="/js/map/map_layer.js"></script>
